# claude-code-aso-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
.claude/: ARCHITECTURE.md  INSTALL.md  USAGE.md
.claude/agents/aso/: aso-strategist.md
.claude/commands/aso/: aso-prelaunch.md
.claude/skills/: aso
.github/: BRANCH_PROTECTION.md  labels.yml
.github/workflows/: auto-pr-dev.yml  auto-pr-main.yml  branch-lifecycle.yml  claude-code-review.yml  claude-main-check.yml  labels.yml  python-quality.yml  release.yml  security.yml  wiki-sync.yml
app-store-optimization/: README.md  ab_test_planner.py  aso_scorer.py  competitor_analyzer.py  keyword_analyzer.py  launch_checklist.py  localization_helper.py  metadata_optimizer.py  review_analyzer.py
app-store-optimization/lib/: data_sources.md  itunes_api.py  scraper.py
aso_skill/: __init__.py  __main__.py  ab_test.py  checklist.py  cli.py  competitors.py  itunes.py  itunes_cache.py  keywords.py  localization.py  metadata.py  reviews.py  scorer.py  state.py
documentation/implementation/: aso-agents-implementation-plan.md
documentation/workflows/: branch-protection-setup.md
outputs/Drooid/: 00-MASTER-ACTION-PLAN.md  FINAL-REPORT.md
outputs/Drooid/01-research/: competitor-gaps.md  keyword-list.md  keyword-master-list.md  search-volume-guide.md
outputs/Drooid/02-metadata/: apple-metadata.md  google-metadata.md
scripts/: generate-wiki-content.py  materialize_compat.py
tests/: conftest.py  test_ab_test.py  test_cli.py  test_dates.py  test_golden.py  test_itunes_cache.py  test_keywords.py  test_metadata.py  test_scorer.py  test_state.py
tests/fixtures/: keywords_input.json  score_input.json
