[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-aso-skill"
version = "1.1.0"
description = "Comprehensive App Store Optimization (ASO) skill for Claude Code with multi-agent system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alireza Rezvani", email = "github@alirezarezvani.com"}
]
maintainers = [
    {name = "Alireza Rezvani", email = "github@alirezarezvani.com"}
]
keywords = [
    "aso",
    "app-store-optimization",
    "keyword-analysis",
    "metadata-optimization",
    "claude-code",
    "claude-skill",
    "mobile-app-marketing",
    "apple-app-store",
    "google-play-store"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"

# No external dependencies - standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.19.1",
    "pytest>=7.0",
]
test = [
    "pytest>=7.0",
]

[project.scripts]
aso = "aso_skill.cli:main"

[tool.setuptools.packages.find]
include = ["aso_skill*"]
exclude = ["app-store-optimization*", "tests*", ".claude*", "outputs*", "documentation*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.urls]
Homepage = "https://github.com/alirezarezvani/claude-code-aso-skill"
Documentation = "https://github.com/alirezarezvani/claude-code-aso-skill/wiki"
Repository = "https://github.com/alirezarezvani/claude-code-aso-skill"
Issues = "https://github.com/alirezarezvani/claude-code-aso-skill/issues"
Changelog = "https://github.com/alirezarezvani/claude-code-aso-skill/blob/main/CHANGELOG.md"

[tool.ruff]
# Target Python 3.8+ for backward compatibility
target-version = "py38"

# Line length matching ASO skill conventions
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".github",
    ".claude",
    "outputs",
    "documentation",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enforced baseline. The codebase currently passes E/F/W; broader rule
# sets (PTH, RET, ARG, PL, RUF, etc.) are aspirational and will be enabled
# incrementally via follow-up issues once the codebase is normalised.
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by line-length)
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Allow print statements in scripts
"scripts/*.py" = ["T201"]
# Allow assert in tests (when added)
"tests/*.py" = ["S101"]

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 15

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["aso_skill"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Formatting options. Preserve existing quote style (the codebase uses
# single quotes; flipping to double would create a 2000-line diff with
# no behavior change).
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Docstring formatting
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
# Type checking configuration (optional, for future strict typing)
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow gradual typing
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing imports for now (no external dependencies)
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Stricter checking for core ASO modules
module = "aso_skill.*"
disallow_untyped_defs = false
check_untyped_defs = true
